@@ -277,8 +277,7 @@ class tx_tika_MetaDataExtractionService extends t3lib_svbase {
 			$this->tikaConfiguration['solrHost'],
 			$this->tikaConfiguration['solrPort'],
 			$this->tikaConfiguration['solrPath'],
-			$this->tikaConfiguration['solrScheme'],
-			$this->tikaConfiguration['solrUseCurl']
+			$this->tikaConfiguration['solrScheme']
 		);
 
 		$query = t3lib_div::makeInstance('tx_solr_ExtractingQuery', $file);
